RESOLVED FIXED313459
Fix cross-origin isolation for workers
https://bugs.webkit.org/show_bug.cgi?id=313459
Summary Fix cross-origin isolation for workers
Anne van Kesteren
Reported 2026-04-27 11:15:56 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-04-27 11:19:06 PDT
EWS
Comment 2 2026-05-04 06:13:06 PDT
Committed 312518@main (57bf18458f9e): <https://commits.webkit.org/312518@main> Reviewed commits have been landed. Closing PR #63723 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-05-04 06:14:13 PDT
Note You need to log in before you can comment on or make changes to this bug.