Improve cross-origin isolation for workers https://bugs.webkit.org/show_bug.cgi?id=313459

Reviewed by Chris Dumez.

Per the HTML specification, StructuredSerializeInternal must throw
DataCloneError when serializing a SharedArrayBuffer if the cross-origin
isolated capability is false. WebKit only enforced this for
window.postMessage, not for workers, MessageChannel, or
BroadcastChannel.

Shared workers and service workers determine their own cross-origin
isolation from their COEP, independent of the creating page. This maps
1:1 to CrossOriginMode (RequireCORP → Isolated, UnsafeNone → Shared),
so process selection by crossOriginMode is sufficient.

That is not sufficient for SharedArrayBuffer however, which needs to be
scoped by agent cluster as well. That should be done separately as this
change is already quite large.

Changes:

- Move the cross-origin isolation check to the top of the isShared()
  block in SerializedScriptValue, before any context-specific handling.

- Extract CrossOriginEmbedderPolicyValue into its own header.

- Pass CrossOriginEmbedderPolicyValue through the full IPC chain
  (NetworkProcess → UIProcess → WebProcess → NetworkProcess) so worker
  processes and context connections are created with the correct
  isolation level.

- Key worker context connections by (RegistrableDomain,
  CrossOriginEmbedderPolicyValue) instead of RegistrableDomain alone,
  so connections with different isolation levels coexist.

- Derive worker process CrossOriginMode directly from the worker's COEP
  and match on it during process selection, ensuring different COEPs
  get separate processes.

- Prevent Isolated processes from being reused for non-isolated pages
  in single-process mode.

Canonical link: https://commits.webkit.org/312518@main